<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="movie_title_detail">movie_title</string>
    <string name="_0_0_rating">0.0</string>
    <string name="_000_duration">000</string>
    <string name="en_language">EN</string>
    <string name="genre">Genres</string>
    <string name="_0000_00_00_release">0000–00-00</string>
    <string name="overview_content">overview content</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="language">Language</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="tagline">tagline</string>
    <string name="change_language_settings">Change Language</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_title">Movie Title</string>
    <string name="favorite">Favorites</string>
    <string name="added_to_fav">Added to favorite</string>
    <string name="remove_from_fav">Removed from favorite</string>
    <string name="search_hint">Movie Title</string>
    <string name="search">Search</string>
    <string name="nothing">Favorite List is Empty</string>
    <string name="appwidget_text">Favorite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>

</resources>
